feat: stale file checker